# django_last_homework

./: Dockerfile  demo.py  devices.csv  docker-compose.yaml  orders.csv  pyproject.toml  quieries.sql  requirements.txt
mysite/: log.txt  log.txt.1  log.txt.2  log.txt.3  requirements.txt  shopapp-fixtures.json  shopapp-products-fixtures.json  shopapp-products-fixtures.xml
mysite/blogapp/: admin.py  urls.py  views.py
mysite/blogapp/migrations/: 0001_initial.py
mysite/blogapp/templates/blogapp/: article_list.html
mysite/locale/en/LC_MESSAGES/: django.po
mysite/locale/ru/LC_MESSAGES/: django.po
mysite/myapiapp/: urls.py  views.py
mysite/myauth/: forms.py  models.py  tests.py  urls.py  views.py
mysite/myauth/management/commands/: bind_user.py
mysite/myauth/migrations/: 0001_initial.py  0002_profile_avatar.py
mysite/myauth/templates/myauth/: about-me.html  create_profile.html  login.html  register.html  update_profile.html  user_detail.html  user_list.html
mysite/mysite/: settings.py  sitemaps.py  urls.py
mysite/newblogapp/: admin.py  apps.py  models.py  sitemap.py  urls.py  views.py
mysite/newblogapp/migrations/: 0001_initial.py
mysite/newblogapp/templates/newblogapp/: article_detail.html  article_list.html  base.html
mysite/requestdataapp/: forms.py  middlewares.py  urls.py  views.py
mysite/requestdataapp/templates/requestdataapp/: base.html  request-query-params.html  user-bio-form.html
mysite/shopapp/: admin.py  admin_mixins.py  common.py  forms.py  models.py  serializers.py  sitemap.py  tests.py  urls.py  views.py
mysite/shopapp/fixtures/: groups-fixture.json  orders-fixture.json  products-fixture.json  users-fixture.json
mysite/shopapp/migrations/: 0001_initial.py  0002_product_created_at_product_discount_product_price.py  0003_product_archived.py  0004_order.py  0005_order_user.py  0006_order_products.py  0007_alter_product_options_alter_product_discount.py  0008_product_created_by.py  0009_order_receipt.py  0010_product_preview.py  0011_productimage.py  0012_alter_order_options_alter_product_options.py  0013_alter_product_description_alter_product_name.py
(+23 files in other folders)
