[project]
name = "django-last-homework"
version = "0.1.0"
description = ""
authors = [
    {name = "Dmitri Prikhodko",email = "dmitri_pr@rambler.ru"}
]
requires-python = ">=3.10"
dependencies = [
    "django (==4.2.14)",
    "djangorestframework (==3.14.0)",
    "asgiref (>=3.8.1,<4.0.0)",
    "attrs (>=25.3.0,<26.0.0)",
    "certifi (>=2025.1.31,<2026.0.0)",
    "django-debug-toolbar (>=5.0.1,<6.0.0)",
    "django-filter (>=25.1,<26.0)",
    "docutils (>=0.21.2,<0.22.0)",
    "drf-spectacular (>=0.28.0,<0.29.0)",
    "flake8 (>=7.1.2,<8.0.0)",
    "flake8-docstrings (>=1.7.0,<2.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "inflection (>=0.5.1,<0.6.0)",
    "jsonschema (>=4.23.0,<5.0.0)",
    "jsonschema-specifications (>=2024.10.1,<2025.0.0)",
    "mccabe (>=0.7.0,<0.8.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "pycodestyle (>=2.12.1,<3.0.0)",
    "pydocstyle (>=6.3.0,<7.0.0)",
    "pyflakes (>=3.2.0,<4.0.0)",
    "pytz (>=2025.1,<2026.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "referencing (>=0.36.2,<0.37.0)",
    "rpds-py (>=0.23.1,<0.24.0)",
    "sentry-sdk (>=2.23.1,<3.0.0)",
    "snowballstemmer (>=2.2.0,<3.0.0)",
    "sqlparse (>=0.5.3,<0.6.0)",
    "tomli (>=2.2.1,<3.0.0)",
    "types-pyyaml (>=6.0.12.20241230,<7.0.0.0)",
    "typing-extensions (>=4.12.2,<5.0.0)",
    "uritemplate (>=4.1.1,<5.0.0)",
    "urllib3 (>=2.3.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
