[project]
name = "django-last-homework"
version = "0.1.0"
description = ""
authors = [
    {name = "Dmitri Prikhodko",email = "dmitri_pr@rambler.ru"}
]
requires-python = ">=3.10"
dependencies = [
    "django (==4.2.0)",
    "djangorestframework (==3.14.0)",
    "asgiref (==3.6.0)",
    "django-debug-toolbar (==4.0.0)",
    "django-filter (==22.1)",
    "gunicorn (==20.1.0)",
    "pillow (==9.4.0)",
    "pytz (==2022.7.1)",
    "sqlparse (==0.4.2)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
